# pomodoro_time

./: .gitignore  CLAUDE.md  README.md  dev.bat  index.html  package-lock.json  package.json  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
